Dropdown adjusted (z-index has to be fixed, same thing for product's img sizing in the Cart.jsp)

--- a/src/main/webapp/resources/css/CartStyle.css
+++ b/src/main/webapp/resources/css/CartStyle.css
@@ -46,9 +46,11 @@ body {
 
 .productimage {
     flex: 0 0 100px;
-    max-width: 100px;
     margin-left: 20px;
     margin-right: 20px;
+    max-width: 200px;
+    max-height: 250px;
+    height: auto;
 }
 
 .price {
