--- a/src/main/webapp/resources/css/Header.css
+++ b/src/main/webapp/resources/css/Header.css
@@ -34,6 +34,7 @@
 }
 
 .fa-circle-user{
+    margin-left: 15px;
     color: black !important;
 }
 
@@ -237,4 +238,43 @@
     top: 65%;
     transform-origin: left top;
     transform: rotateZ(-2.1deg) scaleX(100%);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    z-index: 500;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 500;  /* Ensures the dropdown is above other elements */
+    flex-direction: column;  /* Ensure items are displayed in a column */
+    right: 0;  /* Align the dropdown to the right of the icon */
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+}
+
+.dropdown .dropbtn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
 }
